# tb_macroeconomics

./: .gitattributes  .gitignore  pixi.toml
data/mixing/: conmat_all_KIR.csv
data/population/: un_fertility_20260506T0219Z.csv  un_fertility_rates_KIR.csv  un_mortality_20260506T0212Z.csv  un_population.csv  un_population_20260506T0211Z.csv
data/who/: who_outcomes_20260514T0437Z.csv
notebooks/: 01-Example.ipynb  01-TBModel.ipynb  02-Inputs.ipynb  03-ConmatInputs.ipynb
src/tb_macro/: pyproject.toml
src/tb_macro/tb_macro/: constants.py  demography.py  epi.py  health_system.py  inputs.py  mixing.py  utils.py
src/tb_macro/tb_macro/conmat/: IDN_pop_2025.csv  KIR_pop_2025.csv  VNM_pop_2025.csv  conmat_all_IDN.csv  conmat_all_KIR.csv  conmat_all_VNM.csv  conmat_matrix.R
